test/bad/static_typecheck2.prg
assert: false; // Not reached.
if (i <= 10) { // Static check: is is not declared.

}
